--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set-option -g set-titles on
 set -g mouse on
 set -g set-clipboard on
 
-set -g default-command "zsh"
+set -g default-command "zsh -il"
 
 unbind C-b
 set -g prefix C-Space
