--- a/.config/sway/config
+++ b/.config/sway/config
@@ -152,7 +152,7 @@ exec mako
 #exec emacs --daemon
 exec dbus-update-activation-environment --all --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 #exec waybar
-#exec transmission-daemon
+exec transmission-daemon
 exec ${TERMINAL:-foot} -s
 #exec swww-daemon
 
