--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
+set 0g default-terminal "xterm-256color" # USING tmux-256color BREAKS kmscon
 set-option -g set-titles on
 
 set -g mouse on
