--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
-set 0g default-terminal "xterm-256color" # USING tmux-256color BREAKS kmscon
+# USING tmux-256color BREAKS kmscon
+set -g default-terminal "xterm-256color"
 set-option -g set-titles on
 
 set -g mouse on
