--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 # USING tmux-256color BREAKS kmscon
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set-option -g set-titles on
 
 set -g mouse on
