--- a/base/tmux/tmux.conf
+++ b/base/tmux/tmux.conf
@@ -88,4 +88,4 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 
-run '~/.tmux/plugins/tpm/tpm'
+run '$BOS_HOME_PROFILE/share/.tmux/plugins/tpm/tpm'
