--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,6 +14,8 @@ set $windower rofi -show window
 set $password_manager ~/.nix-profile/bin/1password
 set $gnome_schema org.gnome.desktop.interface
 
+output * background /home/bosco/.guixos-sway/files/assets/wallpapers/clock-subway.jpg fill
+
 # Locker configuration
 set $locker swaylock --screenshots \
     --clock \
